--- a/frontend/src/Components/Question/AskQuestion.css
+++ b/frontend/src/Components/Question/AskQuestion.css
@@ -1,19 +1,47 @@
 .ask-question {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .question-title {
-  width: 70em;
+  width: 850px;
+  margin-top: 30px;
+  margin-bottom: 25px;
+}
+
+.question-area {
+  width: 850px;
+  margin-bottom: 25px;
+}
+
+.question-area input {
 }
 
 .question-detail {
-  width: 70em;
-  height: 50em;
+  width: 850px;
+  height: 350px;
 }
 
 .tags {
-  width: 60em;
-  width: 50%;
-  margin: 0 auto;
-  display: flex;
+  width: 850px;
+}
+
+.individual-tag {
+  margin-top: 10px;
+}
+
+.individual-tag input {
+  width: 200px;
+  height: 35px;
+}
+
+.individual-tag label {
+  width: 150px;
+  display: inline-block;
+}
+
+.submit-button {
+  margin-top: 20px;
+  height: 40px;
 }
