--- a/frontend/src/Components/Chat/UserEditWork.css
+++ b/frontend/src/Components/Chat/UserEditWork.css
@@ -1,8 +1,15 @@
-dialog {
+.user-addwork-dialog dialog {
   width: 500px;
   height: 650px;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  display: flex;
+  flex-direction: column;
+}
+
+.user-addwork-dialog textarea {
+  height: 30%;
+  margin-bottom: 30px;
 }
