--- a/frontend/src/Components/Question/AskQuestion.css
+++ b/frontend/src/Components/Question/AskQuestion.css
@@ -1,26 +1,36 @@
+.ask-question-outer {
+  display: flex;
+  justify-content: center;
+  background: gray;
+}
 .ask-question {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: white;
 }
 
-.question-title {
+.ask-question-title {
   width: 850px;
   margin-top: 30px;
   margin-bottom: 25px;
+  height: 30px;
+  font-size: 15px;
+  background: white;
 }
 
-.question-area {
+/* .question-area {
   width: 850px;
   margin-bottom: 25px;
 }
 
 .question-area input {
-}
+} */
 
 .question-detail {
   width: 850px;
   height: 350px;
+  font-size: 17px;
 }
 
 .tags {
