--- a/frontend/src/Components/Chat/ChatroomOverview.css
+++ b/frontend/src/Components/Chat/ChatroomOverview.css
@@ -15,3 +15,10 @@
   height: 700px;
   background: lightcoral;
 }
+
+.chatroom-overview-title {
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
