--- a/frontend/src/Components/Question/AnswerModal.css
+++ b/frontend/src/Components/Question/AnswerModal.css
@@ -9,17 +9,34 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
 }
 
-.outer-answer h4 {
+.outer-answer .question-desc {
+  text-align: center;
+  width: 100%;
+  font-size: 30px;
+}
+
+.outer-answer h5 {
   display: inline-block;
-  width: 100px;
-  background: red;
+  width: 200px;
+  background: gray;
+  height: 60px;
+  font-size: 20px;
+  margin-right: 20px;
 }
 .answer {
-  height: 500px;
+  min-height: 100px;
+  overflow: hidden;
   background: pink;
   margin-top: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  overflow-wrap: break-word;
 }
 
 .outer-answer textarea {
@@ -32,4 +49,10 @@
 }
 .buttons button {
   margin-left: 20px;
+  width: 80px;
+  height: 60px;
+}
+
+.wrapper-questions {
+  display: flex;
 }
