--- a/frontend/src/Components/Question/AnswerModal.css
+++ b/frontend/src/Components/Question/AnswerModal.css
@@ -41,7 +41,9 @@
 
 .outer-answer textarea {
   width: 100%;
+  height: 350px;
   margin-top: 30px;
+  font-size: 17px;
 }
 .buttons {
   display: flex;
