--- a/frontend/src/Components/Chat/Chatroom.css
+++ b/frontend/src/Components/Chat/Chatroom.css
@@ -51,22 +51,34 @@
 .container-message p {
   display: inline-block;
 }
+
+.user {
+  display: inline-block;
+  width: 45px;
+
+  margin-top: 30px;
+}
+
 .my-message {
   width: 400px;
   background: #f0e8e5;
   border-radius: 10px;
   word-break: break-all;
-  margin-bottom: 10px;
+
   min-height: 35px;
   overflow: hidden;
-  margin-bottom: 10px;
+  margin-bottom: -10px;
+}
+.container-other-user {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.other-user {
-  display: flex;
-  width: 100%;
+.other-users {
+  display: inline-block;
+  width: 45px;
 
-  justify-content: flex-end;
+  margin-top: 5px;
 }
 
 .other-message {
