--- a/frontend/src/Components/Chat/UserEditWork.css
+++ b/frontend/src/Components/Chat/UserEditWork.css
@@ -1,6 +1,6 @@
 .user-addwork-dialog dialog {
-  width: 500px;
-  height: 650px;
+  width: 1000px;
+  height: 800px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -10,6 +10,11 @@
 }
 
 .user-addwork-dialog textarea {
+  font-size: 18px;
   height: 30%;
   margin-bottom: 30px;
+}
+
+.user-addwork-dialog button {
+  font-size: 20px;
 }
